<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/full_bg2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/login_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Farooq_at"
        android:textColor="#3C7962"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/singuptext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/singuptext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:foregroundGravity="center"
        android:gravity="center|center_vertical"
        android:text="@string/Login"
        android:textColor="#3C7962"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/login_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-9dp"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:gravity="center|center_vertical"
        android:text="@string/sign_in_to_continue"
        android:textColor="#0D522C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/singuptext2"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/singuptext2"
        app:layout_constraintTop_toBottomOf="@+id/singuptext2" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="330sp"
        android:layout_height="58sp"
        android:layout_marginTop="43dp"
        android:background="@drawable/bar_style"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/login_text3"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/login_text3"
        app:layout_constraintTop_toBottomOf="@+id/login_text3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:foregroundGravity="center"
        android:gravity="center|center_vertical"
        android:text="@string/forgot_password"
        android:textColor="#0D522C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="330sp"
        android:layout_height="62sp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#3C7962"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/log_in"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/login_Password"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/login_Password"
        app:layout_constraintTop_toBottomOf="@+id/login_Password" />

    <EditText
        android:id="@+id/login_Password"
        android:layout_width="330sp"
        android:layout_height="55sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bar_style"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="90sp"
        android:layout_height="32sp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#003C7962"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:paddingLeft="0sp"
        android:paddingTop="0sp"
        android:paddingRight="0sp"
        android:paddingBottom="0sp"
        android:text="@string/register"
        android:textColor="#084925"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:gravity="center|center_vertical"
        android:text="@string/link"
        android:textColor="#0D522C"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>