<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/full_bg2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/Farooq_at"
        android:textColor="#3C7962"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/signup_text2"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:lineSpacingExtra="-8dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/Create_new_account"
        android:textColor="#3C7962"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Signup_text"
        app:layout_constraintStart_toStartOf="@+id/Signup_text"
        app:layout_constraintTop_toBottomOf="@+id/Signup_text" />

    <EditText
        android:id="@+id/signup_Name"
        android:layout_width="330sp"
        android:layout_height="58sp"
        android:background="@drawable/bar_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/signup_text2"
        app:layout_constraintStart_toStartOf="@+id/signup_text2"
        app:layout_constraintTop_toBottomOf="@+id/signup_text2" />

    <EditText
        android:id="@+id/signup_Email"
        android:layout_width="330sp"
        android:layout_height="58sp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bar_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/signup_Name"
        app:layout_constraintStart_toStartOf="@+id/signup_Name"
        app:layout_constraintTop_toBottomOf="@+id/signup_Name" />

    <EditText
        android:id="@+id/signup_Password"
        android:layout_width="330sp"
        android:layout_height="58sp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bar_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text|textPassword|textAutoComplete"
        app:layout_constraintStart_toStartOf="@+id/signup_Email"
        app:layout_constraintTop_toBottomOf="@+id/signup_Email" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="330sp"
        android:layout_height="58sp"
        android:layout_marginTop="22dp"
        android:backgroundTint="#3C7962"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_Password"
        app:layout_constraintStart_toStartOf="@+id/signup_Password"
        app:layout_constraintTop_toBottomOf="@+id/signup_Password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signup_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_button">

        <ImageView
            android:id="@+id/googleicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/google_tile" />

        <ImageView
            android:id="@+id/facebookicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook_official" />
    </LinearLayout>

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/link"
        app:layout_constraintEnd_toEndOf="@+id/signup_button"
        app:layout_constraintStart_toStartOf="@+id/signup_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

</androidx.constraintlayout.widget.ConstraintLayout>