<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="396dp"
        android:layout_height="861dp"
        app:srcCompat="@drawable/full_back"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="-2dp" />

    <Button
        android:id="@+id/write_btn"
        android:layout_width="150sp"
        android:layout_height="62sp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/write"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/delete_btn" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="150sp"
        android:layout_height="62sp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/all_notes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/write_btn"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.849" />

    <Button
        android:id="@+id/uploadPhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="62sp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/upload_photo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.909" />

    <Button
        android:id="@+id/Uploadvideobtn"
        android:layout_width="wrap_content"
        android:layout_height="62sp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/upload_video"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/uploadPhotoBtn"
        app:layout_constraintEnd_toEndOf="@+id/uploadPhotoBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/uploadPhotoBtn"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.923" />

    <Button
        android:id="@+id/ShowAppDtaBtn"
        android:layout_width="wrap_content"
        android:layout_height="62sp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/o_app_data"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Uploadvideobtn"
        app:layout_constraintEnd_toEndOf="@+id/Uploadvideobtn"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/Uploadvideobtn"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.945" />
</androidx.constraintlayout.widget.ConstraintLayout>